[package]
name = "bitski-apns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.8"
reqwest = { version = "0.11.12", features = ["serde_json"] }
reqwest-middleware = "0.1.6"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_repr = "0.1.9"
serde_with = "2.0.1"
thiserror = "1.0.37"
time = { version = "0.3.16", features = ["serde"] }
url = "2.3.1"
uuid = { version = "1.2.1", features = ["serde"] }
