[package]
name = "apple-apns-cli"
version = "0.5.2"
edition = "2021"
description = "CLI for Apple Push Notification service"
documentation = "https://docs.rs/apple-apns"
license = "MIT"
homepage = "https://github.com/BitskiCo/apple-apns"
repository = "https://github.com/BitskiCo/apple-apns"
keywords = ["apple", "apn", "apns", "ios", "notification"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "apns"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.66"
apple-apns = { version = "0.5.2", path = "../apple-apns" }
clap = { version = "4.0.29", features = ["derive", "env"] }
dotenvy = "0.15.6"
humantime = "2.1.0"
serde = "1.0.151"
serde_json = "1.0.89"
time = { version = "0.3.17", features = ["parsing"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
url = "2.3.1"
uuid = "1.2.2"
