[package]
name = "apple-apns"
version = "0.5.3"
edition = "2021"
description = "Rust client for Apple Push Notification service"
documentation = "https://docs.rs/apple-apns"
license = "MIT"
homepage = "https://github.com/jakelee8/apple-apns"
repository = "https://github.com/jakelee8/apple-apns"
keywords = ["apple", "apn", "apns", "ios", "notification"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.8"
jsonwebtoken = { version = "8.2.0", optional = true }
once_cell = "1.17.0"
reqwest = { version = "0.11.14", features = ["serde_json"] }
reqwest-middleware = "0.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
serde_plain = "1.0.1"
serde_repr = "0.1.10"
serde_with = { version = "2.2.0", features = ["time_0_3"] }
thiserror = "1.0.38"
time = { version = "0.3.17", features = ["serde"] }
url = "2.3.1"
uuid = { version = "1.3.0", features = ["serde"] }

[dev-dependencies]
apple-apns = { path = ".", features = ["http1"] }
reqwest-tracing = "0.4.0"
serde_json = "1.0.92"
tokio = { version = "1.25.0", features = ["rt"] }
wiremock = "0.5.17"

[features]
default = ["jwt", "rustls"]

http1 = []
jwt = ["jsonwebtoken"]
rustls = ["reqwest/rustls-tls"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
