[package]
name = "bitski-apns-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bitski-apns = { path = "../bitski-apns" }
clap = { version = "4.0.26", features = ["derive", "env"] }
humantime = "2.1.0"
serde = "1.0.147"
serde_json = "1.0.88"
time = { version = "0.3.17", features = ["parsing"] }
uuid = "1.2.2"
