[package]
name = "bitski-apns-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bitski-apns = { version = "0.1.0", path = "../bitski-apns" }
clap = { version = "4.0.27", features = ["derive", "env"] }
dotenvy = "0.15.6"
humantime = "2.1.0"
serde = "1.0.148"
serde_json = "1.0.89"
time = { version = "0.3.17", features = ["parsing"] }
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
uuid = "1.2.2"
