[package]
name = "bitski-apns-cli"
version = "0.2.0"
edition = "2021"
publish = ["bitski-rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bitski-apns"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.66"
bitski-apns = { version = "0.2.0", path = "../bitski-apns", registry = "bitski-rust" }
clap = { version = "4.0.29", features = ["derive", "env"] }
dotenvy = "0.15.6"
humantime = "2.1.0"
serde = "1.0.150"
serde_json = "1.0.89"
time = { version = "0.3.17", features = ["parsing"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
uuid = "1.2.2"
