[package]
name = "bitski-apns"
version = "0.4.0"
edition = "2021"
publish = ["bitski-rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.8"
jsonwebtoken = { version = "8.2.0", optional = true }
reqwest = { version = "0.11.13", features = ["serde_json"] }
reqwest-middleware = "0.2.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
serde_plain = "1.0.1"
serde_repr = "0.1.9"
serde_with = { version = "2.1.0", features = ["time_0_3"] }
thiserror = "1.0.37"
time = { version = "0.3.17", features = ["serde"] }
url = "2.3.1"
uuid = { version = "1.2.2", features = ["serde"] }

[features]
default = ["jwt", "rustls"]

http1 = []
jwt = ["jsonwebtoken"]
rustls = ["reqwest/rustls-tls"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
